# oauth2_cli_github_example

./: .gitignore  Cargo.toml  README.md  RELEASES.md  req_01.http
.github/workflows/: docs_pages.yml  rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml
automation_tasks_rs/: .old_metadata.json  Cargo.toml
automation_tasks_rs/src/: main.rs  secrets_always_local_mod.rs
doc_comments/: crates_io_api_token_mod.md  docker_io_api_token_mod.md  encrypt_decrypt_with_ssh_key_mod.md  generate_strong_password_mod.md  github_api_token_with_oauth2_mod.md  github_oauth2_device_workflow_mod.md  secret_vault_mod.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/oauth2_cli_github_example/: all.html  fn.main.html  index.html  sidebar-items.js
docs/oauth2_cli_github_example/auto_github_api_mod/: fn.description_and_topics_to_github.html  fn.git_has_remote.html  fn.git_has_upstream.html  fn.github_api_create_a_github_pages_site.html  fn.github_api_create_new_release.html  fn.github_api_get_authenticated_user.html  fn.github_api_get_organization.html  fn.github_api_get_repository.html  fn.github_api_organization_repository_new.html  fn.github_api_replace_all_topics.html  fn.github_api_update_description.html  fn.github_api_upload_asset_to_release.html  fn.github_api_user_repository_new.html  fn.new_remote_github_repository.html  index.html  sidebar-items.js
docs/oauth2_cli_github_example/crates_io_api_token/: index.html
docs/oauth2_cli_github_example/crates_io_api_token_mod/: index.html  (+1 more)
examples/: crates_io_example.rs  github_example.rs
src/: auto_github_api_mod.rs  crates_io_api_token.rs  crates_io_api_token_mod.rs  docker_hub_api_token_mod.rs  encrypt_decrypt_with_ssh_key_mod.rs  github_api_token_with_oauth2_mod.rs  github_oauth2_device_workflow_mod.rs  main.rs
src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  docker_hub_api_token_mod.rs  docker_io_api_token_mod.rs  generate_strong_password_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs  secret_vault_mod.rs
(+105 files in other folders)
